--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -460,13 +460,63 @@
         });
     }
 
-    function logNNResults(state)
-    {
-        return function(samplesQueried, sampleResults)
-        {
-            console.log("Logging Nearest Neighbors")
-            console.log(samplesQueried)
-            console.log(sampleResults)
+    function fillNNResults(state, categories, chooserMap, selectorMap) {
+        return function(samplesQueried, sampleResults) {
+            // Count number of responses for each answer of each question
+            let categoryCounts = {}
+            let display = {}
+            for (let i = 0; i < samplesQueried.length; i++) {
+                for (let j = 0; j < categories.length; j++) {
+                    let cat = categories[j]
+                    if (!(cat in categoryCounts))
+                        categoryCounts[cat] = {}
+                    let val = sampleResults[i][j]
+                    if (!(val in categoryCounts[cat]))
+                        categoryCounts[cat][val] = 0
+                    categoryCounts[cat][val] += 1
+                }
+            }
+
+            for (let j = 0; j < categories.length; j++){
+                let cat = categories[j]
+                let sum = 0
+                let maxval = -1
+                let maxkey = null
+                for (let key in categoryCounts[cat]) {
+                    let val = categoryCounts[cat][key]
+                    sum += val
+                    if (key !== "Not provided" && val > maxval) {
+                        maxval = val
+                        maxkey = key
+                    }
+                }
+
+                let chosen = null
+                if (!(cat in chooserMap) || chooserMap[cat]["type"] === "max")
+                    chosen = maxkey
+                else if (chooserMap[cat]["type"] === "specified")
+                    chosen = chooserMap[cat]["value"]
+                else if (chooserMap[cat]["type"] === "same") {
+                    let me = samplesQueried.indexOf(state.barcode_prefix + state.sample_id)
+                    let j = categories.indexOf(cat)
+                    chosen = sampleResults[me][j]
+                }
+                display[cat] = {}
+                display[cat]["response"] = chosen
+                display[cat]["value"] = Math.round((categoryCounts[cat][chosen] / sum) * 100) + "%"
+            }
+
+            for (let cat of categories) {
+                if (!(cat in selectorMap))
+                    continue;
+                let resp_selector = selectorMap[cat][0]
+                let val_selector = selectorMap[cat][1]
+                let resp = display[cat]["response"]
+                let val = display[cat]["value"]
+                $(resp_selector).text(resp).removeClass("spinner-grow spinner-grow-sm");
+                $(val_selector).text(val).removeClass("spinner-grow spinner-grow-sm");
+            }
+
         }
     }
 
@@ -707,19 +757,33 @@
 
     function updateSimilarity(state){
         const K = 100 // However many neighbors we want to pull metadata for
-        const CATEGORIES = [
-            "types_of_plants",
-            "probiotic_frequency",
-            "exercise_frequency",
-            "age_years",
-            "diet",
-            "multivitamin",
-            "sleep_duration",
-            "sex",
-            "pm_gender"]
+        const SELECTOR_MAP = {
+            "types_of_plants": ["#beta_diversity_plants_per_week_response", "#beta_diversity_plants_per_week_value"],
+            "probiotic_frequency": ["#beta_diversity_probiotics_response", "#beta_diversity_probiotics_value"],
+            "exercise_frequency": ["#beta_diversity_exercise_response", "#beta_diversity_exercise_value"],
+            "age_years": ["#beta_diversity_age_response", "#beta_diversity_age_value"],
+            //"diet": ["",""],
+            "multivitamin": ["#beta_diversity_multivitamin_response", "#beta_diversity_multivitamin_value"],
+            "sleep_duration": ["#beta_diversity_sleep_response", "#beta_diversity_sleep_value"],
+            "sex":  ["#beta_diversity_sex_response", "#beta_diversity_sex_value"]
+        }
+        const CHOOSER = {
+            "types_of_plants": {"type": "max"},
+            "probiotic_frequency": {"type": "max"},
+            "exercise_frequency": {"type": "max"},
+            "age_years": {"type": "same"},
+            //"diet": {"type": "same"},
+            "multivitamin": {"type": "specified", "value": true},
+            "sleep_duration": {"type": "max"},
+            "sex":  {"type": "same"}
+        }
+        const CATEGORIES = []
+        for (let key in SELECTOR_MAP)
+            CATEGORIES.push(key)
+
         retrieveNeighbors(state, K)
             .then(queryNeighborAndSelfMetadata(state, CATEGORIES))
-            .then(logNNResults(state)) //TODO: Switch from logging to filling in divs by adding selectors here
+            .then(fillNNResults(state, CATEGORIES, CHOOSER, SELECTOR_MAP)) //TODO: Switch from logging to filling in divs by adding selectors here
     }
 
     function updateTaxonomy(taxonomyData, state){
@@ -1180,6 +1244,7 @@
                               ----- <span id="beta_diversity_plants_per_week_value" class="info-loader text-success">...</span> 
                               of people with a microbiome like yours eat 
                               <span id="beta_diversity_plants_per_week_response" class="info-loader text-success">...</span>
+                              plants per week
                           </div>
                       </div>
                       <div class="col">
@@ -1201,8 +1266,9 @@
                           <img class="diversity-icon" src='/static/img/probiotics.png'>
                           <div class="diversity-text">
                               ----- <span id="beta_diversity_probiotics_value" class="info-loader text-success">...</span> 
-                              of people with a microbiome like yours take probiotics 
+                              of people with a microbiome like yours
                               <span id="beta_diversity_probiotics_response" class="info-loader text-success">...</span>
+                              take probiotics
                           </div>
                       </div>
                       <div class="col">
@@ -1210,7 +1276,6 @@
                           <div class="diversity-text">
                               ----- <span id="beta_diversity_multivitamin_value" class="info-loader text-success">...</span> 
                               of people with a microbiome like yours take vitamins
-                              <span id="beta_diversity_multivitamin_response" class="info-loader text-success">...</span>
                           </div>
                       </div>
                   </div>
@@ -1233,8 +1298,9 @@
                           <img class="diversity-icon" src='/static/img/sleep.png'>
                           <div class="diversity-text">
                               ----- <span id="beta_diversity_sleep_value" class="info-loader text-success">...</span> 
-                              of people with a microbiome like yours sleep more than 
+                              of people with a microbiome like yours get
                               <span id="beta_diversity_sleep_response" class="info-loader text-success">...</span>
+                              of sleep at night
                           </div>
                       </div>
                   </div>
@@ -1249,13 +1315,13 @@
                           <img class="diversity-icon" src='/static/img/age.png'>
                           <div class="diversity-text">
                               ----- <span id="beta_diversity_age_value" class="info-loader text-success">...</span> 
-                              of people with a microbiome like yours are a similar age
+                              of people with a microbiome like yours were the same age as you
                           </div>
                       </div>
                       <div class="col">
                           <img class="diversity-icon" src='/static/img/gender.png'>
                           <div class="diversity-text">
-                              ----- <span id="beta_diversity_sleep_value" class="info-loader text-success">...</span> 
+                              ----- <span id="beta_diversity_sex_value" class="info-loader text-success">...</span>
                               of people with a microbiome like yours were the same gender
                           </div>
                       </div>
