--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -277,14 +277,6 @@
                            "You and the Microbes Around You")
     }
 
-    function formatAlphaURL(state) {
-        let base = state.public_endpoint + '/dataset/' + state.dataset_input.value + '/plotting/diversity/alpha/' + state.alpha_metric + '/percentiles-plot';
-        if (state.sample_id !== "") {
-            base = base + '?sample_id=' + state.barcode_prefix + state.sample_id;
-        }
-        return base;
-    }
-
     function refreshDatasets(state) {
         let url = state.public_endpoint + '/sample/list/dataset/' + state.barcode_prefix + state.sample_id;
         $.ajax({
@@ -680,79 +672,96 @@
     function updateDiversity(state){
         //https://www-dev.ucsd.edu/results-api/diversity/alpha/group/faith_pd?summary_statistics=true
 
-        let queries = [];
-        let countries = ["USA", "United Kingdom"];
-        for (let country of countries){
-            let query = $.ajax(
+        const more_than_30_plants =
             {
-                url: state.public_endpoint + "/dataset/" +
-                     state.dataset_input.value +
-                     "/diversity/alpha/group/" +
-                     state.alpha_metric + "?" + $.param({summary_statistics: true}),
-                method: "POST",
-                data: JSON.stringify(
-                {
-                    "metadata_query":
+                "metadata_query":
                     {
                         "condition": "OR",
-                        "rules":
-                        [
+                        "rules": [
                             {
-                                "id": "country",
+                                "id": "types_of_plants",
                                 "operator": "equal",
-                                "value": country
+                                "value": "More than 30"
                             }
                         ]
                     }
-                }),
-                contentType: "application/json"
-            });
-            queries.push(query)
+            }
+        //Oops, I don't have a field for this yet.
+        //let more_than_30_fermented =
+        const exercise_regularly =
+            {
+                "metadata_query":
+                    {
+                        "condition": "OR",
+                        "rules": [
+                            {
+                                "id": "exercise_frequency",
+                                "operator": "equal",
+                                "value": "Regularly (3-5 times/week)"
+                            }
+                        ]
+                    }
+            }
+        //I wish we had ordered categorical variables because this query is stupid
+        const sleep_more_than_6_hrs =
+            {
+                "metadata_query":
+                    {
+                        "condition": "OR",
+                        "rules": [
+                            {
+                                "id": "sleep_duration",
+                                "operator": "equal",
+                                "value": "6-7 hours"
+                            },
+                            {
+                                "id": "sleep_duration",
+                                "operator": "equal",
+                                "value": "7-8 hours"
+                            },
+                            {
+                                "id": "sleep_duration",
+                                "operator": "equal",
+                                "value": "8 or more hours"
+                            }
+                        ]
+                    }
+            }
+
+        const POST_DATA = {
+            "plants": more_than_30_plants,
+            //"fermented": more_than_30_fermented,
+            "exercise": exercise_regularly,
+            "sleep": sleep_more_than_6_hrs
         }
 
-        let queryMe = $.ajax(
-            {
-                url: state.public_endpoint + "/dataset/" +
-                     state.dataset_input.value +
-                     "/diversity/alpha/single/" +
-                     state.alpha_metric + "/" + state.barcode_prefix + state.sample_id
-            }
-        );
-        queries.push(queryMe);
-        $.when.apply($, queries).done(function(){
-            let traces = [];
-            for (let i = 0; i < countries.length; i++)
-            {
-                let country = countries[i];
-                let alpha_summary = arguments[i][0];
+        const SELECTORS = {
+            "plants": "#diversity_30_plants_per_week",
+//            "fermented": "#diversity_fermented_regularly",
+            "exercise": "#diversity_exercise_regularly",
+            "sleep": "#diversity_sleep_alot"
+        }
 
-                let fill = "tozeroy";
-                if (i > 0)
-                    fill = "tozeroy";
-                let trace = {
-                    name: countries[i],
-                    x: alpha_summary.group_summary.percentile_values,
-                    y: alpha_summary.group_summary.percentile,
-                    fill: fill
-                };
-                traces.push(trace);
-            }
-
-            let myQueryIndex = countries.length;
-            let myAlphaMetric = arguments[myQueryIndex][0].data;
-            let trace = {
-                name: "Me",
-                x: [myAlphaMetric, myAlphaMetric],
-                y: [0, 100],
-                mode: "line"
-            };
-            traces.push(trace);
-
-            let layout = {
-                title: "Faith PD by Country"
-            };
-            // Plotly.newPlot("diversity-vis", traces);
-        })
+        // We override the default alpha_metric from state for this page.
+        let alpha_metric = "observed_features"
+        for (let key in POST_DATA) {
+            $.ajax(
+                {
+                    url: state.public_endpoint + "/dataset/" +
+                        state.dataset_input.value +
+                        "/diversity/alpha/group/" +
+                        alpha_metric + "?" + $.param({summary_statistics: true}),
+                    method: "POST",
+                    data: JSON.stringify(POST_DATA[key]),
+                    contentType: "application/json",
+                    success: function (data) {
+                        let display = data["group_summary"]["median"]
+                        $(SELECTORS[key]).text(display).removeClass("spinner-grow spinner-grow-sm");
+                    }
+                }).fail(function (result, textStatus, errorThrown) {
+                console.log("Couldn't retrieve alpha metrics (" + key + ")")
+            });
+        }
     }
 
     function updateSimilarity(state){
@@ -1152,13 +1161,13 @@
                       <div class="col">
                           <img class="diversity-icon" src='/static/img/vegetables.png'>
                           <div class="diversity-text">
-                              ----- Eat more than 30 plants a week = <span id="diversity_30_plants_per_week" class="info-loader text-success">...</span>
+                              ----- Eat more than 30 plants a week = <span id="diversity_30_plants_per_week" class="info-loader text-success">...</span> unique microbial features
                           </div>
                       </div>
                       <div class="col">
                           <img class="diversity-icon" src='/static/img/exercise.png'>
                           <div class="diversity-text">
-                              ----- Exercise regularly = <span id="diversity_exercise_regularly" class="info-loader text-success">...</span>
+                              ----- Exercise regularly = <span id="diversity_exercise_regularly" class="info-loader text-success">...</span> unique microbial features
                           </div>
                       </div>
                   </div>
@@ -1166,13 +1175,13 @@
                       <div class="col">
                           <img class="diversity-icon" src='/static/img/fermented.png'>
                           <div class="diversity-text">
-                              ----- Eat fermented foods regularly = <span id="diversity_fermented_regularly" class="info-loader text-success">...</span>
+                              ----- Eat fermented foods regularly = <span id="diversity_fermented_regularly" class="info-loader text-success">...</span>  unique microbial features
                           </div>
                       </div>
                       <div class="col">
                           <img class="diversity-icon" src='/static/img/sleep.png'>
                           <div class="diversity-text">
-                              ----- Sleep more than 6 hours per night = <span id="diversity_sleep_alot" class="info-loader text-success">...</span>
+                              ----- Sleep more than 6 hours per night = <span id="diversity_sleep_alot" class="info-loader text-success">...</span> unique microbial features
                           </div>
                       </div>
                   </div>
