Brief text reduction

--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1207,18 +1207,14 @@
                     live all over and in your body. The diversity of your
                     microbiome, how similar it is to other peoples', and the types
                     of bacteria living inside you have all been linked to health,
-                    disease and lifestyle traits in numerous studies. Scientists
-                    use microbiome data from large groups of people to compare the
-                    microbiome between different groups of people. For example, we
-                    explore how the microbiome differs between people that eat many
-                    kinds of plants (salads, vegetables, fruits) each week,
-                    compared to those that eat very few. Or we can look at how
-                    exercising frequently or rarely influences the number of
-                    different bacteria inside your body
+                    disease and lifestyle traits in numerous studies. 
                 </p>
-                
+
                 <p>
-                Scientists often use many different approaches to see how your microbiome differs:
+                Scientists often use many different approaches to see how your
+                microbiome differs. We've analyzed your microbiome sample using
+                standard microbiome research tools, and the results are broken
+                down below in a few different categories:
                 </p>
 
                 <div class="how_you_compare_section">
