--- a/microsetta_interface/templates/new_results_page.jinja2
+++ b/microsetta_interface/templates/new_results_page.jinja2
@@ -1182,7 +1182,7 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="tmi-content">
 <div class="row">
     <div class="col-sm-auto">
         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
@@ -1673,5 +1673,6 @@
             </div>
           </div>
     </div>
+</div>
 </div>
 {% endblock %}
