New admin page to generate and view activation codes

--- a/microsetta_interface/templates/sitebase.jinja2
+++ b/microsetta_interface/templates/sitebase.jinja2
@@ -43,6 +43,7 @@
       <a class="btn btn-outline-success" href="/admin/system_message">System Panel</a>
       <a class="btn btn-outline-success" href="/admin/emperor_playground">Emperor Playground</a>
       <a class="btn btn-outline-success" href="{{authrocket_url}}/logout?redirect_uri={{endpoint}}/logout">Log Out</a>
+      <a class="btn btn-outline-success" href="/admin/activation">Activation Codes</a>
       <form class="form-inline" action="/admin/account_search" method="get">
         <input id="email_query" name="email_query" class="form-control mr-sm-2" type="search" placeholder="User Email" aria-label="Search"/>
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Find Account</button>
